BusOne/src/objects/Product_Event_vod__c.object
<CustomObject>
    <description>The Product Event object stores activities and events that are tied to the Product. These events are then displayed on the Analytics Sales Trend Reports.</description>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Long textual description of the product event.</description>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Date_vod__c</fullName>
        <description>The date of the Product Event.</description>
        <label>Event Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Catalog_vod__c</fullName>
        <description>The Product record that the Product Event is associated with.</description>
        <label>Product Catalog</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Events</relationshipLabel>
        <relationshipName>Product_Event_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Product Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>